# GAUSS

./: .travis.yml  CMakeLists.txt  Doxyfile.in  GAUSS.astylerc  INSTALL.md  README.md
cmake/: GAUSSConfig.cmake.in
cmake/modules/: CMakeUtilities.cmake  FindARPACK.cmake  FindSuiteSparse.cmake
config/: GAUSS_config.h.in  example_config_debug.sh  example_config_release.sh  example_config_release_with_arpack.sh  extern_build.sh  extern_miniapps_build.sh  gelever.sh  gelever_miniapps.sh  travis_build.sh
config/build_scripts/: build_astyle.sh  build_extern.sh  build_hypre.sh  build_linalg.sh  build_metis.sh  build_mfem.sh  build_mpich.sh  build_spe10.sh  build_suitesparse.sh
doc/: CONTRIBUTING.md  EXAMPLE.md
examples/: CMakeLists.txt  README.md  Sampler.hpp  generalgraph.cpp  generalgraph_dist.cpp  graph_mlmc.cpp  graph_mltopo.cpp  graph_timestep.cpp  graphupscale.cpp  mleigen.cpp  mlmc.cpp  mltopo.cpp  poweriter.cpp  sampler.cpp  stest.py  timestep.cpp
include/: GAUSS.hpp  Graph.hpp  GraphCoarsen.hpp  GraphEdgeSolver.hpp  GraphGenerator.hpp  GraphSpace.hpp  GraphTopology.hpp  GraphUpscale.hpp  HybridSolver.hpp  Level.hpp  LocalEigenSolver.hpp  MGLSolver.hpp  MinresBlockSolver.hpp  MixedMatrix.hpp  SPDSolver.hpp  SharedEntityComm.hpp  Upscale.hpp  UpscaleOperators.hpp  Utilities.hpp
miniapps/: CMakeLists.txt  README.md
miniapps/graphvis/: .gitignore  CMakeLists.txt  README.md  generate_pos.py  graph_vis.py  graph_vis_3d.py  utilities.py
miniapps/rs2001/: CMakeLists.txt  README.md
miniapps/rs2001/cmake/: ReservoirSimulator2001Config.cmake.in
miniapps/rs2001/cmake/modules/: FindMFEM.cmake
miniapps/rs2001/config/: gelever.sh
miniapps/rs2001/examples/: CMakeLists.txt  MLMC_SPE10.cpp  PDESamplerTest.cpp  dirichlet.cpp  finitevolume.cpp  mltopo.cpp  part_vis.cpp  spectral.cpp  test.py  timestep.cpp
miniapps/rs2001/include/: DarcySolver.hpp  Sampler.hpp  Utilities.hpp  spe10.hpp
miniapps/rs2001/src/: DarcySolver.cpp  Sampler.cpp  Utilities.cpp  spe10.cpp
miniapps/rs2001/testcode/: CMakeLists.txt  rescaling.cpp
src/: Graph.cpp  GraphCoarsen.cpp  GraphEdgeSolver.cpp  GraphGenerator.cpp  GraphTopology.cpp  GraphUpscale.cpp  HybridSolver.cpp  LocalEigenSolver.cpp  MGLSolver.cpp  MinresBlockSolver.cpp  MixedMatrix.cpp  SPDSolver.cpp  SharedEntityComm.cpp  Upscale.cpp  Utilities.cpp
testcode/: CMakeLists.txt  eigen.cpp  test_Graph.cpp  test_MetisGraphPartitioner.cpp  test_projection.cpp  tinygraph.py  tinygraphsolver.cpp  wattsstrogatz.cpp
